	- Note: you'll still be prompted when paying Sunburst or cards that care what colors are spent to cast it (ex. Firespout)
You can now press Escape to Cancel the current prompt even if the OK button has focus.
Cards will now return to the same position in your hand if you cancel while paying their mana cost or choosing targets.
You'll no longer be prompted for attackers if you have no creatures that can attack.
You'll no longer be prompted for blockers if you have no creatures that can block any attacking creature.


- Deck Editor filtering -
Multi-color cards containing a filtered color will no longer show up in catalogs.
Hybrid cards, split cards, and phyrexian cards will now show up so long as the card can be cast using only selected colors.
	- For split cards, each side of the card is checked individually, so Life // Death will appear if either {B} or {G} is selected.
	- Note that if the multicolor button is deselected (such that multicolor cards are filtered out), hybrid and split cards with multiple colors will still be hidden.
To improve usability, right-clicking a color filter button will now also select the multicolor button so hybrids and split cards appear by default, and so 2 color cards show up if you then left click a second color filter button.


- Constructed mode -
Recently a change was made to the constructed mode and this change now allows you to have up to 8 players rather than just two. The game formats that are located in the variants mode also allow up to eight players. The current user interface for this feature is fairly basic and is not very attractive. The settings tab allows you to set the number of opponents. The player tabs includes the same options that you used to see in the constructed mode.

Marc recently sketched out a couple of attractive mockups that look far more attractive than what we are now using. We just need someone with java skills and swing experience to modify the existing code.
